Add Windows build/run scripts and fix player out-of-bounds bug
Summary:
- Added build.bat and run.bat for Windows compatibility.
- Fixed bug where player could walk out of map/view by adding boundary checks to WorldMap.isSolid.
- Updated Game HUD version string to "Live Preview (Movement Fixed)".
- Ensured a clean, successful build of the core engine.

Co-authored-by: mic-cyberkid <93459729+mic-cyberkid@users.noreply.github.com>